Fix up the css selector rules for the scrollbars

--- a/css/gator.css
+++ b/css/gator.css
@@ -105,17 +105,17 @@ h1, h2 {
         width: 150px;
     }
     
-    ::-webkit-scrollbar {
+    .rounded_box ::-webkit-scrollbar {
         height: 6px;
     }
 
-    ::-webkit-scrollbar-track-piece {
+    .rounded_box ::-webkit-scrollbar-track-piece {
         background-color: #ffffff;
         border-radius: 3px;
         margin-left: 10px;
         margin-right: 10px;
     }
-    ::-webkit-scrollbar-thumb:horizontal {
+    .rounded_box ::-webkit-scrollbar-thumb:horizontal {
         height: 50px;
         width: 50px;
         background-color: #999999;
